--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="service1"></div>
-  <div id="service2"></div>
+  <!-- <div id="service1"></div>
+  <div id="service2"></div> -->
   <br>
   <div id="service3"></div>
   <br>
-  <div id="service4"></div>
+  <!-- <div id="service4"></div> -->
   <br>
   <script src="bundles/service1.js"></script>
   <script src="bundles/service2.js"></script>
